--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,183 +1,121 @@
-/*Remove borders and colors. fix bg image*/
-
-::-webkit-scrollbar {
-    width: 7px;
-}
-  
-  /* Track */
-::-webkit-scrollbar-track {
-    display: none;
+body {
+  margin: 0;
+  background-image: url("../images/äng.png");
+  font-family: 'Trebuchet MS';
 }
 
-::-webkit-scrollbar-thumb {
-    background: rgb(255, 255, 255, 0.7); 
-    border-radius: 999px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(255, 255, 255); 
-  }
-
-img{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
+h1 {
+  font-size: 4vw; /* Implement this to make responsive font sizes*/ 
 }
 
-body, html {
-	margin: 0;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	scroll-behavior: smooth;
+.gridContainer {
+  display: grid;
+  grid-template: 100vh / calc(100vw*2/5) 1fr;
 }
 
-a:link{
-    color: inherit;
-    text-decoration: none;
+.left { /* Left side of screen (Title) */
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255, 0.8);
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  text-size-adjust: revert;
 }
 
-a:visited {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  a:active {
-    color: inherit;
-    text-decoration: none;
-  }
-
-.background {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    /* I think this automatically sets values to row so no need to declare?*/
+.right { /* Right side of screen (Header, bodytitle, body, button)*/
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); 
+  color: white;
+  display: grid;
+  grid-template: 25% 1fr 35% 1fr / 100%;
 }
 
-.titleUpper {
-    width: calc(100vw*(2/5));
-    height: 100vh;
-    background-color: rgb(255, 255, 255, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.rightItem {
+  width: auto;
+  height: auto;
 }
 
-.titleLower {
-    font-family: Arial;
-    font-size: 3em;
-    font-weight: 600;
-    text-align: center;
-    width: 80%;
-}
-
-.bodyUpper {
-    width: calc(100vw*(3/5));
-    height: 100vh;
-    background-color: rgb(82, 82, 82, 0.7);
-    display: flex;
-    flex-direction: column;
-}
-
-.bodyUpper > div {
-    width: 100%;
-    height: 25%;
-    display: flex;
-    justify-content: flex-start;
-    align-content: center;
-    align-items: center;
-}
-
-.header {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    margin: 50px;
+.header { /* Make into an id so you can put it 
+          inside of the rightItem class instead of having a
+          new class entirely */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header > div {
-    width: auto;
-    height: 100%;
-    margin: 0px 10px 0px 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /*Add text*/
+  width: auto;
+  height: auto;
+  margin: auto;
+  display: flex;
+  font-size: 2vw;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.headerText{
-    color: white;
-    font-family: Arial;
-    font-size: 1.25em;
-    font-weight: 400;
+.header > div:hover {
+  color:red;
+  cursor: pointer;
 }
 
-.stodOss {
-    font-weight: 600;
-    font-size: 1.5em;
+#title {
+  height: 80%;
+  width: 80%;
+  font-size: 3vw;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
 }
 
-.headerText:hover{
-    color: red;
-    cursor: pointer;
+#body {
+  height: 80%;
+  width: 90%;
+  font-size: 1.5vw;
+  line-height: 1.5em;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow-y: scroll;
 }
 
-.titleBodyLower {
-    width: 100%;
-    height: 100%;
-    margin: 0px 75px 0px 75px;
-    color: white;
-    font-family: Arial;
-    font-size: 3em;
-    font-weight: 500;
-    text-align: center;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+#body::-webkit-scrollbar {
+  display: none;
 }
 
-.bodyLower {
-    width: 80%;
-    height: 100%;
-    margin: 50px 35px 0px 50px;
-    color: white;
-    font-family: Arial;
-    font-size: 1.25em;
-    font-weight: 400;
-    text-align: left;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    overflow-y: scroll; /* Change to scroll later*/
+#button {
+  height: 80%;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.callToAction{
-    width: 150px;
-    height: 50px;
-    margin: 0px 75px 0px 75px; /* Fix margins */ 
-    border-radius: 25px;
-    background-color: white;
-    color: black;
-    font-family: Arial;
-    font-size: 1em;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.button {
+  height: 8vh;
+  width: 14vw;
+  background-color: white;
+  color: black;
+  border-radius: 9999px;
+  font-size: 2vw;
+  font-weight: bold ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.callToAction:hover{
-    background-color: red;
-    color: white;
-    cursor: pointer;
+.button:hover {
+  background-color: red;
+  color: white;
+  cursor: pointer;
 }
