--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,3 +122,5 @@ h1 {
 
 /* Zooming in and out stopped working.
 This happened sometime after fixing header i think*/
+
+/* Add media queries to make site work on phone */
