--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,26 @@ body {
   font-family: 'Trebuchet MS';
 }
 
+a:link{
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
 h1 {
   font-size: 4vw; /* Implement this to make responsive font sizes*/ 
 }
@@ -121,6 +141,10 @@ h1 {
 }
 
 /* Zooming in and out stopped working.
-This happened sometime after fixing header i think*/
+This happened sometime after fixing header i think
+
+^This happens beacuse of vw as a text size. 
+Background image still weird tho
+*/
 
 /* Add media queries to make site work on phone */
