Fixed Image Pathing

--- a/src/css/index/style.css
+++ b/src/css/index/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url("../images/äng.png"); /* This needs to be compressed */
+  background-image: url("../../images/äng.png"); /* This needs to be compressed */
   font-family: 'Trebuchet MS';
 }
 
