--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,6 +47,11 @@ h1 {
   grid-template: 100% / calc(100vw*2/5) 1fr;
 }
 
+#header {
+  background-color: white;
+  box-shadow: 0px 0px 10px;
+}
+
 #headerTitle {
   width: 100%;
   height: 100%;
@@ -134,6 +139,149 @@ h1 {
 
 /* End of insane dropdown menu implementation */
 
+/* Hamburger menu */
+
+#menuToggle
+{
+  display: none;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
+  line-height: 1.5em;
+}
+
+#menuToggle a:hover
+{
+  font-weight: bold;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */ 
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: black;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: white;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #575F38;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+@media (orientation: portrait) {
+  #menuToggle {
+    display: block;
+  }
+}
+
+/* No more hamburger*/
+
 .gridContainer {
   display: grid;
   grid-template: 100vh / calc(100vw*2/5) 1fr;
@@ -216,7 +364,14 @@ h1 {
   .gridContainer {
     grid-template: calc(100vh*2/5) calc(100vh*3/5) / 100vw;
   }
-  .header {
+  #header {
+    background-color: transparent;
+    box-shadow: none;
+  }
+  #headerTitle > h2 {
+    display: none;
+  }
+  #headerLinks > a{
     display: none;
   }
   .right {
@@ -234,7 +389,7 @@ h1 {
 /* Styrelse */
 
 .contactCardFlex {
-  width: 100vw;
+  width: auto;
   min-height: 100vh;
   height: auto;
   display: flex;
@@ -294,21 +449,26 @@ h1 {
 /* Stadgar */
 
 .stadgarFlex {
-  width: 100vw;
+  width: auto;
   height: auto;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  justify-content: center;
+  text-align: left;
 }
 
 .stadgarFlex > h1 {
-  padding: 200px 0px 0px 0px;
+  padding-top: 200px;
+  width: 80vw;
 }
 
 .stadgarFlex > p {
-  padding: 0px 200px 50px;
+  margin: auto;
+  width: 80vw;
   text-align: left;
   line-height: 1.5em;
+  margin-block-start: 1.5em;
+  padding-bottom: 100px;
 }
