--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,18 +1,6 @@
 body {
   margin: 0;
   font-family: 'Trebuchet MS';
-
-}
-
-.backgroundImg {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  z-index: -1;
-  background-image: url("../images/malmangar.jpg"); /* This needs to be compressed */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
 }
 
 a:link{
@@ -282,110 +270,63 @@ h1 {
 
 /* No more hamburger*/
 
-.gridContainer {
+/* Landing page */
+
+
+#backgroundImage {
+  max-width: 100vw;
+  min-height: 100vh;
+  height: auto;
+  pointer-events: none;
+  position: fixed;
+  z-index: -2;
+}
+
+
+.headerTest {
+  width: 100vw;
+  height: auto;
+  background-color: white;
+  padding: 25px;
+  box-sizing: border-box; /* Prevents padding from causing overflow*/
+  position: fixed;
+  top: 0;
+}
+
+.gridLayout {
+  min-height: 100vh;
+  width: 100vw;
   display: grid;
-  grid-template: 100vh / calc(100vw*2/5) 1fr;
+  grid-template: 100% / calc(100%*(2/5)) 1fr;
 }
 
-.left { /* Left side of screen (Title) */
-  width: 100%;
+.gridLayout > div {
   height: 100%;
-  background-color: rgb(250, 249, 246, 0.6);
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  text-align: center;
-}
-
-#name {
-  width: 80%;
-  margin: auto;
-}
-
-.right { /* Right side of screen (Header, bodytitle, body, button)*/
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0, 0.8); 
   color: white;
   display: grid;
-  grid-template: 2fr 40% 1fr / 100%;
-}
-
-#title {
-  height: 80%;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  text-align: center;
-  font-size: 2em;
-}
-
-#body {
-  height: 80%;
-  width: 90%;
-  line-height: 1.5em;
-  font-size: 1.25em;
-  margin: auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-#button {
-  height: 80%;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-#button > a {
-  height: 50px;
-  width: 150px;
-  background-color: #575F38;
-  color: white;
-  border-radius: 9999px;
-  font-weight: bold ;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  place-items: center;
   text-align: center;
 }
 
-#button > a:hover {
-  background-color: #454c2c;
-  cursor: pointer;
+#left {
+  color: black;
+  background-color: rgb(255, 255, 255, .6);
+  width: 100%;
+}
+
+#right {
+  background-color: rgb(0, 0, 0, 0.8);
+  width: 100%;
 }
 
 @media (orientation: portrait) {
-  .gridContainer {
-    min-height: 100vh;
-    grid-template: 50vh auto / 100vw;
+  body {
+    padding: 50px 0 0;
   }
-  #header {
-    background-color: transparent;
-    box-shadow: none;
-  }
-  #headerTitle > h2 {
-    display: none;
-  }
-  #headerLinks > a{
-    display: none;
-  }
-  .right {
-    grid-template: 1fr 40% 1fr / 100%;
-  }
-  #button {
-    align-items: center;
+  .gridLayout {
+    grid-template: calc(100%*(2/5)) 1fr / 100%;
   }
 }
-
-/* Stöd Oss */
-
-/* Om Föreningen */
 
 /* Styrelse */
 
