--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,18 @@
 body {
   margin: 0;
   font-family: 'Trebuchet MS';
+
+}
+
+.backgroundImg {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+  background-image: url("../images/malmangar.jpg"); /* This needs to be compressed */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 a:link{
@@ -37,7 +49,7 @@ h1 {
 
 #header {
   background-color: white;
-  box-shadow: 0px 0px 10px;
+  box-shadow: 0px 0px 10px gray;
 }
 
 #headerTitle {
@@ -270,63 +282,110 @@ h1 {
 
 /* No more hamburger*/
 
-/* Landing page */
-
-
-#backgroundImage {
-  max-width: 100vw;
-  min-height: 100vh;
-  height: auto;
-  pointer-events: none;
-  position: fixed;
-  z-index: -2;
-}
-
-
-.headerTest {
-  width: 100vw;
-  height: auto;
-  background-color: white;
-  padding: 25px;
-  box-sizing: border-box; /* Prevents padding from causing overflow*/
-  position: fixed;
-  top: 0;
-}
-
-.gridLayout {
-  min-height: 100vh;
-  width: 100vw;
+.gridContainer {
   display: grid;
-  grid-template: 100% / calc(100%*(2/5)) 1fr;
+  grid-template: 100vh / calc(100vw*2/5) 1fr;
 }
 
-.gridLayout > div {
+.left { /* Left side of screen (Title) */
+  width: 100%;
   height: 100%;
-  color: white;
+  background-color: rgb(250, 249, 246, 0.6);
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-content: center;
   text-align: center;
 }
 
-#left {
-  color: black;
-  background-color: rgb(255, 255, 255, .6);
-  width: 100%;
+#name {
+  width: 80%;
+  margin: auto;
 }
 
-#right {
-  background-color: rgb(0, 0, 0, 0.8);
+.right { /* Right side of screen (Header, bodytitle, body, button)*/
   width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.8); 
+  color: white;
+  display: grid;
+  grid-template: 2fr 40% 1fr / 100%;
+}
+
+#title {
+  height: 80%;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  text-align: center;
+  font-size: 2em;
+}
+
+#body {
+  height: 80%;
+  width: 90%;
+  line-height: 1.5em;
+  font-size: 1.25em;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+#button {
+  height: 80%;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+#button > a {
+  height: 50px;
+  width: 150px;
+  background-color: #575F38;
+  color: white;
+  border-radius: 9999px;
+  font-weight: bold ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#button > a:hover {
+  background-color: #454c2c;
+  cursor: pointer;
 }
 
 @media (orientation: portrait) {
-  body {
-    padding: 50px 0 0;
+  .gridContainer {
+    min-height: 100vh;
+    grid-template: 50vh auto / 100vw;
   }
-  .gridLayout {
-    grid-template: calc(100%*(2/5)) 1fr / 100%;
+  #header {
+    background-color: transparent;
+    box-shadow: none;
+  }
+  #headerTitle > h2 {
+    display: none;
+  }
+  #headerLinks > a{
+    display: none;
+  }
+  .right {
+    grid-template: 1fr 40% 1fr / 100%;
+  }
+  #button {
+    align-items: center;
   }
 }
+
+/* Stöd Oss */
+
+/* Om Föreningen */
 
 /* Styrelse */
 
@@ -394,6 +453,18 @@ h1 {
   width: auto;
   height: auto;
   min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.stadgarFlexBackground {
+  background-color: white;
+  box-shadow: 0 0 20px gray;
+  border-radius: 25px;
+  margin: 200px 0;
+  width: 80vw;
+  height: auto;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -401,14 +472,8 @@ h1 {
   text-align: left;
 }
 
-.stadgarFlex > h1 {
-  padding-top: 200px;
-  width: 80vw;
-}
-
-.stadgarFlex > p {
+.stadgarFlexBackground > p {
   margin: auto;
-  width: 80vw;
   text-align: left;
   line-height: 1.5em;
   margin-block-start: 1.5em;
