--- a/src/css/style.css
+++ b/src/css/style.css
@@ -179,6 +179,9 @@ a:active {
   opacity: 0;
   z-index: 2;
   -webkit-touch-callout: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #menuToggle span {
