--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,6 +90,10 @@ a:active {
   cursor: pointer;
 }
 
+#phone-title {
+  display: none;
+}
+
 /* Dropdown menu */
 
 .dropdown-content {
@@ -147,7 +151,6 @@ a:active {
 #menuToggle {
   display: none;
   position: relative;
-  top: 25px;
   left: 25px;
   z-index: 1;
   -webkit-user-select: none;
@@ -186,8 +189,8 @@ a:active {
 
 #menuToggle span {
   display: block;
-  width: 33px;
-  height: 4px;
+  width: 30px;
+  height: 3px;
   margin-bottom: 5px;
   position: relative;
   top: 50%;
@@ -428,15 +431,29 @@ a:active {
 /* Media queries */
 
 @media (orientation: portrait) {
+  .header {
+    grid-template: 100% / auto 1fr;
+    color: black;
+    background-color: white;
+    border-radius: 0 0 5px 5px;
+  }
   #header {
-    background-color: transparent;
     box-shadow: none;
+  }
+  #headerTitle {
+    align-items: center;
+    width: 100px;
   }
   #headerLinks {
     display: none;
   }
   #headerTitle > h2{
     display: none;
+  }
+  #phone-title {
+    display: block;
+    font-size: 1.25em;
+    padding: 0 25px 0 0;
   }
   .gridContainer {
     grid-template: calc(100vh*2/5) 1fr / 100vw;
@@ -455,7 +472,7 @@ a:active {
     font-size: 1em;
   }
   .flex-layout-1 {
-    padding: 20px 0;
+    padding: 100px 0;
   }
   .flex-layout-1-card {
     justify-content: center;
@@ -471,7 +488,7 @@ a:active {
     line-height: 1.25em;
   }
   .contactCardFlex {
-    padding: 25px 10px;
+    padding: 100px 10px;
   }
   .flex-layout-2 { 
     padding: 100px 25px;
