--- a/src/css/style.css
+++ b/src/css/style.css
@@ -436,6 +436,7 @@ a:active {
     color: black;
     background-color: white;
     border-radius: 0 0 5px 5px;
+    padding: 15px 0;
   }
   #header {
     box-shadow: none;
