--- a/src/header.css
+++ b/src/header.css
@@ -1,107 +1,95 @@
-/* Homepage Navbar */
+/* Header */ 
 
-.navbar {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: transparent;
-    width: calc((100vw * (3/5)) - (100vw - 100%)); /* Somehow counts out the scrollbar idk */
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+header {
+  background-color: white;
+  display: flex;
+  padding: 10px 25px;
+  box-shadow: 0 0 10px gray;
 }
 
-/* pages Navbar */
-
-.navbar-pages {
-    color: black;
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    top: 0;
-    width: 100vw;
-    height: 100px;
-    box-shadow: 0 0 10px gray;
-    background-color: white;
-    z-index: 3;
-    font-weight: bold;
+header > h1 {
+  flex-grow: 1;
 }
 
-.navbar-pages-home {
-    width: calc((100vw * (2/5)) - (100vw - 100%));
-    display: flex;
-    padding-left: 25px;
-    align-items: center;
+header > nav {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.navbar-pages-links {
-    position: unset;
-    color: unset;
+nav > div {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Dropwdown Stuff */
-
-.navbar > div {
-    flex-grow: 1;
-    height: 100%;
-}
-  
-.dropbtn {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    font-size: 1.25rem;
-    background-color: transparent;
-    border: none;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
+nav a {
+  width: fit-content;
+  font-size: 1.25rem;
+  color: black;
+  padding: 8px;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    top: 100%;
-    min-width: 100%;
-    z-index: 1;
+nav > div > a:hover {
+  font-weight: bold;
+  margin-bottom: -3px;
+  border-bottom: 3px solid green;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+nav > div:hover > .dropdown-menu {
+  display: flex;
 }
 
-.dropdown-content a:hover {
-    background-color: #ddd;
+.dropdown-menu {
+  width: 200px;
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  z-index: 9999;
+  top: 100%;
+  background-color: white;
+  box-shadow: 0 0 10px gray;
 }
 
-.dropdown:hover .dropdown-content{
-    display: block;
+.dropdown-menu > a {
+  width: auto;
+  display: block;
+  padding: 25px;
 }
 
-.dropdown:hover .dropbtn {
-    background-color: #f1f1f1;
-    color: black;
+.dropdown-menu > a:hover {
+  font-weight: bold;
+  border-bottom: 3px solid green;
+  background-color: #f9f9f9;
 }
 
-@media only screen and (max-width: 855px), (pointer:none), (pointer:coarse)  { 
-    .navbar {
+.active {
+  font-weight: bold;
+  margin-bottom: -3px;
+  border-bottom: 3px solid green;
+}
+
+#call-to-action {
+  padding: 15px;
+  background-color: green;
+  color: #f5f5f5;
+  border-radius: 5px;
+}
+
+.call-to-action > #call-to-action:hover {
+  border-bottom: none;
+  outline: 3px solid black;
+}
+
+@media only screen and (max-width: 1200px) { 
+    header {
         display: none;
     }   
-    .navbar-pages {
-        display: none;
-    }
 }
 
 /* Hamburger menu */
@@ -109,8 +97,8 @@
 #menuToggle {
     display: none;
     position: fixed;
-    top: 25px;
-    left: 25px;
+    top: 15px;
+    left: 15px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
@@ -212,7 +200,7 @@
     transform: none;
   }
   
-  @media only screen and (max-width: 855px), (pointer:none), (pointer:coarse)  { 
+  @media screen and (max-width: 1200px) {
     #menuToggle {
       display: block;
     }
