--- a/src/pages.css
+++ b/src/pages.css
@@ -55,7 +55,7 @@ color: inherit;
     display: none;
 }
 
-/* Body of member page and contact page */
+/* Body of member page, contact page and aktuellt page */
 
 .bli-medlem-info {
     width: 60vw;
@@ -95,6 +95,30 @@ color: inherit;
 .contact-information {
     font-size: 1.25rem;
     margin-top: 0;
+}
+
+.aktuellt-info {
+    width: 60vw;
+    padding: 80px 0;
+    margin: auto;
+    transform: translate(0, -125px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 0 10px gray;
+}
+
+.aktuellt-info > h1 {
+    font-size: 3.5rem;
+    margin-top: 0;
+    text-align: center;
+}
+
+.aktuellt-info > * {
+    width: 90%;
 }
 
 @media only screen and (max-width: 1200px), (pointer:none), (pointer:coarse) {
@@ -142,6 +166,25 @@ color: inherit;
     .contact-information {
         font-size: 1rem;
     }
+
+    .aktuellt-info {
+        transform: translate(0, -25%);
+        transform: unset;
+        box-shadow: unset;
+        border-radius: unset;
+        background-color: unset;
+        padding: 25px 0;
+        width: 95vw;
+    }
+
+    .aktuellt-info > h1 {
+        display: none;
+    }
+
+    .bli-medlem-info > * {
+        width: 95%;
+    }
+
 }
 
 /* Layout for About, Goals and stadgar */
