--- a/src/header.css
+++ b/src/header.css
@@ -5,6 +5,9 @@ header {
   display: flex;
   padding: 10px 25px;
   box-shadow: 0 0 10px gray;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
 }
 
 header > h1 {
