--- a/src/pages.css
+++ b/src/pages.css
@@ -279,7 +279,7 @@ color: inherit;
 .styrelse-flexbox-wrapper > div > img {
     width: 100%;
     height: 75%;
-    object-fit: fill;
+    object-fit: cover;
     border-radius: 15px 15px 0 0;
 }
 
