--- a/src/header.css
+++ b/src/header.css
@@ -17,7 +17,7 @@ header > h1 {
 header > nav {
   flex-grow: 1;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   justify-content: space-around;
   align-items: center;
 }
@@ -89,7 +89,7 @@ nav > div:hover > .dropdown-menu {
   outline: 3px solid black;
 }
 
-@media only screen and (max-width: 1200px) { 
+@media only screen and (max-width: 1400px) { 
     header {
         display: none;
     }   
@@ -205,7 +205,7 @@ nav > div:hover > .dropdown-menu {
     transform: none;
   }
   
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1400px) {
     #menuToggle {
       display: block;
     }
